--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 
     <!--                      Menu buttnon                    -->
     <div class='menu-btn'>
-        <div class='menu-btn__burger'></div>
+        <div class = "line"></div>
+        <div class = "line"></div>
+        <div class = "line"></div>
     </div>
-
+    
     <div id='container'>
         <div class='child' id='child2'
         onclick='startGame(1)'>
